if (READLINE_FOUND)
  set(PROMPT posixPromptLine.cc)
  set(PLINK ${Readline_LIBRARY} -lncurses -pthread)
else(READLINE_FOUND)
  set(PROMPT basicPromptLine.cc)
  set(PLINK)
endif(READLINE_FOUND)

add_executable(rasmus-cmd main.cc promptLine.hh ${PROMPT})
target_link_libraries(rasmus-cmd frontend ${PLINK})
set_target_properties(rasmus-cmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY ../../)	
if (NOT APPLE)
  install(TARGETS rasmus-cmd RUNTIME DESTINATION bin)
endif()

